# zotero-mcp-lite

./: .gitignore  Dockerfile  LICENSE  README.md  env.example  pyproject.toml
src/zotero_mcp/: __init__.py  cli.py  client.py  config.py  local_db.py  server.py  setup_helper.py  template_engine.py  utils.py
src/zotero_mcp/default_prompts/: __init__.py  bibliography_export.md  comparative_review.md  comparative_review_template.html  literature_review.md  literature_review_template.html
tests/: __init__.py  test_cli.py  test_client.py  test_local_db.py  test_server.py  test_utils.py
