[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp-lite"
dynamic = ["version"]
authors = [
  { name = "54yyyu", email = "54yyyu@github.com" },
]
description = "A lightweight Model Context Protocol server for Zotero"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzotero>=1.5.0",
    "fastmcp>=2.14.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/xmruuu/zotero-mcp-lite"
"Bug Tracker" = "https://github.com/xmruuu/zotero-mcp-lite/issues"
"Original" = "https://github.com/54yyyu/zotero-mcp"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"

[tool.hatch.version]
path = "src/zotero_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/zotero_mcp/**/*.py",
    "src/zotero_mcp/**/*.md",
    "src/zotero_mcp/**/*.html",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
