[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp-lite"
version = "0.1.3"
authors = [
  { name = "xmruuu", email = "xmruuu@github.com" },
]
description = "Fast, Customizable & Light Zotero MCP server for AI research assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "zotero", "claude", "cursor", "research", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pyzotero>=1.5.0",
    "fastmcp>=2.14.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "mistune>=3.0.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/xmruuu/zotero-mcp-lite"
"Bug Tracker" = "https://github.com/xmruuu/zotero-mcp-lite/issues"
"Source" = "https://github.com/xmruuu/zotero-mcp-lite"

[project.scripts]
zotero-mcp = "zotero_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
